# NeuralHatching

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Curvature.cpp  Curvature.h  Editor.cpp  Editor.h  Input.cpp  Input.h  LICENSE.txt  Model.cpp  Model.h  NeuralHatching.cpp  Pipeline.cpp  Pipeline.h  README.md  Scene.cpp  Scene.h  UI.cpp  UI.h  Viewport.cpp  Viewport.h
Include/: Logging.h
Shaders/: fullscreen.hlsl  geometry.hlsl  linearize.hlsl  matcap.hlsl
Shaders/Nodes/: GeometryNode.cpp  GeometryNode.h  Node.cpp  Node.h
